ffi/derive/tests/ui_fail/generics_are_forbiden_in_ffi.stderr
error: Generics are not supported
 --> tests/ui_fail/generics_are_forbiden_in_ffi.rs:5:16
  |
5 | fn freestanding<T>(v: T) -> T {
  |                ^^^

error: Generics are not supported
  --> tests/ui_fail/generics_are_forbiden_in_ffi.rs:12:21
   |
12 | pub struct FfiStruct<T> {
   |                     ^^^

error[E0412]: cannot find type `FfiStruct` in this scope
  --> tests/ui_fail/generics_are_forbiden_in_ffi.rs:12:12
   |
12 | pub struct FfiStruct<T> {
   |            ^^^^^^^^^ not found in this scope
